# DMAD

./: .gitignore  Dockerfile  requirements.txt  setup.cfg
DMAD/: .env  Env.py  pastebin
DMAD/CODE/: main.py  set2.py
DMAD/Logging/: logging_config.py
