[metadata]
name = DMAD
description = A project containing exercises for Algorithm course
author = Thor Malmby Jørgin
platforms = win32, unix, linux
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    Logging
    CODE
install_requires =
    python-decouple>=3.6
python_requires = >=3.8
package_dir =
    =DMAD
zip_safe = no